GetProjects almost done